feat: criando estrutura base de paginas e button

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
+@import './style/normalize';
+@import './style/cores';
+
+@import './style/base-pagina';
+
+@import './style/button';
