feat: finalizando estrutura base de lista de tarefas

--- a/src/app/modules/todo/components/todo-list/todo-list.component.html
+++ b/src/app/modules/todo/components/todo-list/todo-list.component.html
@@ -1,1 +1,16 @@
-<p>todo-list works!</p>
+<section class="container">
+
+  <div class="todo">
+    <div class="todo-list">
+
+      <header class="todo-list_header">
+        <h2>Lista de tarefas</h2>
+        <button class="todo-button" (click)="acaoNovaTarefa()">Nova Tarefa</button>
+      </header>
+  
+      <hr>
+
+    </div>
+  </div>
+
+</section>
