--- a/src/app/modules/todo/components/todo-list/todo-list.component.html
+++ b/src/app/modules/todo/components/todo-list/todo-list.component.html
@@ -12,7 +12,10 @@
 
       <section class="todo-list_content">
 
-        <app-todo-item *ngFor="let tarefa of tarefas" [todo]="tarefa"></app-todo-item>
+        <app-todo-item *ngFor="let tarefa of tarefas" [todo]="tarefa"
+         (edit)="editTodo($event)"
+         (delete)="deleteTodo($event)"
+         (toggleDone)="toggleDone($event)"></app-todo-item>
 
       </section>
 
